--- a/index.html
+++ b/index.html
@@ -6,8 +6,33 @@
     <title>Menu AF2W</title>
     <link rel="stylesheet" href="CSS.css">
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+    <script>
+        // Função para detectar se o dispositivo é um celular
+        function isMobile() {
+            return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        }
+
+        // Função para verificar a orientação da tela
+        function checkOrientation() {
+            if (window.innerHeight > window.innerWidth) {
+                // Tela em modo retrato (vertical)
+                document.body.innerHTML = `
+                    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; text-align: center; font-size: 24px; background-color: #f0f0f0;">
+                        <p>Por favor, gire seu dispositivo para o modo paisagem (horizontal) para usar a aplicação.</p>
+                    </div>
+                `;
+            }
+        }
+
+        // Redirecionar para mobile.html se for um celular
+        if (isMobile()) {
+            checkOrientation(); // Verificar orientação ao carregar a página
+            window.addEventListener('resize', checkOrientation); // Verificar ao redimensionar a tela
+        }
+    </script>
 </head>
 <body>
+    <!-- Conteúdo principal para desktop -->
     <div class="menu">
         <ul>
             <li><a href="#" class="menu-item" data-category="equipments">Equipments</a></li>
@@ -38,6 +63,7 @@
                 </div>
             </div>
 
+            <!-- Categoria Instruments -->
             <div class="category" id="instruments">
                 <h2>Instruments</h2>
                 <div class="images">
@@ -54,7 +80,7 @@
                         <span class="image-name">Elevado</span>
                     </div>
                     <div class="image-item">
-                        <img src="tatank4.jpg" alt="Tank 3" class="library-image" draggable="true">
+                        <img src="tatank4.jpg" alt="Tank 4" class="library-image" draggable="true">
                         <span class="image-name">Esgoto</span>
                     </div>
                     <div class="image-item">
